# finetuning-peft

./: README.md  pyproject.toml
apps/: financial_sentiment_analysis.ipynb
