[project]
name = "finetuning-peft"
version = "0.1.0"
description = "Financial sentiment analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "evaluate>=0.4.5",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "peft>=0.16.0",
    "pre-commit>=4.2.0",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
    "transformers-interpret>=0.10.0",
    "xgboost>=3.0.2",
]
